# prosper

./: .gitignore  Cargo.toml  Justfile  README.md  example.pr
examples/: std.c  std.pr
prmacros/: Cargo.toml
prmacros/src/: lib.rs
prosperc/: Cargo.toml
prosperc/src/: analyze.rs  ast.rs  lex.rs  main.rs  span.rs  token.rs
prosperc/src/ast/: mod.rs  parse.rs
prosperc/src/codegen/: mod.rs
prosperc/src/parse/: expr.rs  func_def.rs  function.rs  ident.rs  item.rs  mod.rs  type.rs
prparse/: Cargo.toml
prparse/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parse.rs  span.rs  token.rs
prparse/src/validate/: expr.rs  literal.rs  mod.rs  typed.rs
prstd/: std.c
tree-sitter-prosper/: package.json  pnpm-lock.yaml
vscode-extension/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
vscode-extension/syntaxes/: prosper.tmLanguage.json
